overlays/pre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-img-fs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-img-fs
  template:
    metadata:
      labels:
        app: web-img-fs
    spec:
      containers:
        - name: web-img-fs
          image: danieldocke/web-img-fs:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
