overlays/pre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-img-fs
spec:
  selector:
    app: web-img-fs
  ports:
    - port: 8080
      protocol: TCP
