overlays/pre/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-img-fs
spec:
  host: web-img-fs.apps.pocp.prepro.int.cvattv.com.ar
  to:
    kind: Service
    name: web-img-fs
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
